test/code/test_class_method_undef.php
<?php

class A {}
$a = new A;
$a->no_exists();

